<resources>
    <string name="app_name">place</string>
    <string name="login" >Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="password_check">Password Check</string>
    <string name="cd_me">My Information</string>
    <string name="loading">loading\.\.\.</string>
    <string name="join_date">Joined Date</string>
    <string name="label_map_fragment">Map</string>
    <string name="label_my_profile">My Profile</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications -> Place -> App Permissions and grant access to Location.</string>

    <!--<string name="google_map_api_key">Get your own key</string>-->

    <string name="my_places">My Places</string>
    <string name="log_out">Log Out</string>
    <string name="create">Create</string>
    <string name="add_photo">Add Photo</string>
    <string name="visited_date">Visited Date</string>
    <string name="modify">Modify</string>
    <string name="detail">Detail</string>
    <string name="review">Review</string>

</resources>